fix: collapsed markdown

--- a/.dumi/global.css
+++ b/.dumi/global.css
@@ -5,3 +5,10 @@ main {
 .dumi-default-header-content {
   max-width: 85vw !important;
 }
+
+.dumi-default-features-item {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
